tests/snapshots/tiebreak__tiebreak_neg_index@002.snap
---
source: tests/tiebreak.rs
description: "input: items [\"a\", \"b\", \"c\", \"ab\", \"ac\"]\noptions: --tiebreak=-index,score\nafter:\n  @char 'b'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  b                                                                             "
"> ab                                                                            "
"  2/5                                                                        0/0"
"> b                                                                             "
cursor: (24, 4)
