tests/snapshots/tiebreak__tiebreak_neg_length-2.snap
---
source: tests/tiebreak.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"> ac                                                                            "
"  2/5                                                                        0/0"
"> c                                                                             "
cursor: (24, 4)
