tests/snapshots/tiebreak__tiebreak_neg_length.snap
---
source: tests/tiebreak.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"  b                                                                             "
"  ac                                                                            "
"  aba                                                                           "
"> aaba                                                                          "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (24, 3)
