tests/snapshots/tiebreak__tiebreak_neg_length@002.snap
---
source: tests/tiebreak.rs
description: "input: items [\"aaba\", \"b\", \"c\", \"aba\", \"ac\"]\noptions: --tiebreak=-length,score\nafter:\n  @char 'c'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"> ac                                                                            "
"  2/5                                                                        0/0"
"> c                                                                             "
cursor: (24, 4)
