tests/snapshots/tiebreak__tiebreak_neg_pathname-2.snap
---
source: tests/tiebreak.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  foo                                                                           "
"  baz/foo                                                                       "
"> foo/bar                                                                       "
"  3/3                                                                        0/0"
"> foo                                                                           "
cursor: (24, 6)
