tests/snapshots/tiebreak__tiebreak_neg_pathname.snap
---
source: tests/tiebreak.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  foo                                                                           "
"  baz/foo                                                                       "
"> foo/bar                                                                       "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
