tests/snapshots/tiebreak__tiebreak_neg_pathname@001.snap
---
source: tests/tiebreak.rs
description: "input: items [\"foo/bar\", \"baz/foo\", \"foo\"]\noptions: --tiebreak=-pathname,score"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  foo                                                                           "
"  baz/foo                                                                       "
"> foo/bar                                                                       "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
