tests/snapshots/tiebreak__tiebreak_neg_score-2.snap
---
source: tests/tiebreak.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  b                                                                             "
"> ab                                                                            "
"  2/5                                                                        0/0"
"> b                                                                             "
cursor: (3, 23)
