tests/snapshots/tiebreak__tiebreak_neg_score.snap
---
source: tests/tiebreak.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ac                                                                            "
"  ab                                                                            "
"  c                                                                             "
"  b                                                                             "
"> a                                                                             "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (2, 23)
