tests/snapshots/tiebreak__tiebreak_neg_score@001.snap
---
source: tests/tiebreak.rs
description: "input: items [\"a\", \"b\", \"c\", \"ab\", \"ac\"]\noptions: --tiebreak=-score"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  ac                                                                            "
"  ab                                                                            "
"  c                                                                             "
"  b                                                                             "
"> a                                                                             "
"  5/5                                                                        0/0"
">                                                                               "
cursor: (24, 3)
